--- a/paisesApp/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/paisesApp/src/app/pais/pages/por-pais/por-pais.component.html
@@ -4,16 +4,11 @@
 
 <div class="row">
     <div class="col">
-        <form (ngSubmit)="buscar()" autocomplete="off">
-
-            <input type="text"
-            name="termino"
-            class="form-control"
-            placeholder="Buscar Pais..."
-            [(ngModel)]="termino"
-            >
-
-        </form>
+        <app-pais-input 
+        (onEnter)="buscar ( $event )"
+        (onDebounce) = "sugerencias ( $event )"
+        >
+    </app-pais-input>
     </div>
 </div>
 
@@ -27,26 +22,7 @@
 
     <div class="col">
 
-        <table class="table table-hover">
-            <thead>
-                <th>#</th>
-                <th>Bandera</th>
-                <th>Nombre</th>
-                <th>Poblacion</th>
-                <th></th>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>bandera</td>
-                    <td>Nombre</td>
-                    <td>12312</td>
-                    <td>
-                        <a href="/pais/id">ver</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+      <app-pais-tabla [paises]="paises"></app-pais-tabla>
 
     </div>
 </div>
