--- a/paisesApp/src/app/pais/components/pais-input/pais-input.component.html
+++ b/paisesApp/src/app/pais/components/pais-input/pais-input.component.html
@@ -2,10 +2,10 @@
 
     <input type="text"
     name="termino"
-    class="form-control"
-    placeholder="Buscar Pais..."
+    class="form-control"  
+    [placeholder]="placeholder"
     [(ngModel)]="termino"
     (input)="teclaPresionada( )"
-    >
+    />
 
 </form>
