--- a/paisesApp/src/app/pais/components/pais-tabla/pais-tabla.component.html
+++ b/paisesApp/src/app/pais/components/pais-tabla/pais-tabla.component.html
@@ -12,7 +12,7 @@
             <td>
                 <img [src]="pais.flag" class="small-flag">
             </td>
-            <td>{{pais.name}}</td>
+            <td>{{pais.capital}} , {{pais.name}}</td>
             <td>{{pais.population | number}}</td>
             <td>
                 <a [routerLink]="[ '/pais' , pais.alpha2Code ]">ver</a>
