--- a/paisesApp/src/app/shared/sidebar/sidebar.component.html
+++ b/paisesApp/src/app/shared/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
                 class="list-group-item"
                 routerLinkActive="active"
                 [routerLinkActiveOptions]="{ exact: true }">
-                Buscar Pais
+                Buscar Por Pais
             </li>
 
 
@@ -17,7 +17,7 @@
                 class="list-group-item"
                 routerLinkActive="active"
                 >
-                Buscar Pais
+                Buscar por Region
             </li>
 
 
@@ -26,7 +26,7 @@
                 class="list-group-item"
                 routerLinkActive="active"
                 >
-                Buscar Pais
+                Buscar por Capital
             </li>
         </ul>
   
