--- a/paisesApp/src/app/pais/pages/por-region/por-region.component.html
+++ b/paisesApp/src/app/pais/pages/por-region/por-region.component.html
@@ -1,42 +1,31 @@
-<div class="row">
-
-    <h3>Buscar Por region <small> region activa {{regionActiva | titlecase}}</small></h3>
-<hr>
-
-</div>
-
-<div class="row">
-
-    <div class="col">
-        <!-- [class.btn-primary]="item === regionActiva" -->
-
-        <!-- [ngClass]="{
-            'btn-primary': regionActiva === item,
-            'btn-outline-primary': regionActiva !== item
-        }" -->
-        <button *ngFor="let item of regiones"
-                [class]="(item === regionActiva) ? 'btn btn-primary' : 'btn btn-outline-primary'"
-                (click)="activarRegion(item)">
-                {{item}}
-
-        </button>
-
+<div class="animate__animated animate__fadeIn animate__faster">
+    <h3>Buscar por region <small> {{ regionActiva | titlecase }} </small></h3>
+    <hr>
+    
+    <h5>Seleccione la region</h5>
+    
+    <div class="row">
+        <div class="col">
+            
+            <!-- [class.btn-primary]="region === regionActiva" -->
+            <!-- [ngClass]="{
+                'btn-primary': regionActiva === region,
+                'btn-outline-primary': regionActiva !== region
+            }"-->
+    
+            <button *ngFor="let region of regiones"
+                    [class]="getClaseCSS( region )"
+                    (click)="activarRegion( region )">
+                {{ region | titlecase }}
+            </button>
+    
+        </div>
     </div>
 
-
-</div>
-
-
-<div *ngIf="hayError" 
-     class="alert alert-danger">
-    No se encontró nada con el término {{ termino }}
 </div>
 
 <div *ngIf="paises.length > 0" class="row">
     <div class="col">
-
         <app-pais-tabla [paises]="paises"></app-pais-tabla>
-
-
     </div>
 </div>
